cluster/apps/media/apps/calibre-web-downloader/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: calibre-web-downloader
  namespace: media
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - booktok.${domain_name}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authentik-forward-auth
            namespace: traefik
      backendRefs:
        - name: calibre-web-downloader-app
          port: 8084
